# MIPSemu

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
examples/: Ins_test.cpp  Memory_test.cpp  demo_Storage.cpp
include/: Instruction.h  types.h
include/clock/: logic_clock.h
include/hardware/: Chip.h  FlipFlop.h  Output.h
include/interface/: interface.h
include/memory/: Memory.h  Pointer.h  bits.h  stream_loader.h
include/messaging/: messager.h
include/storage/: Cache.h  Ordering.h  Storage.h  bits.h  test.cpp
include/sync/: LogicClock.h
include/util/: BinInspect.h  strings.h
lab2/: CMakeLists.txt  Cache.h  Makefile  README.md  cache_debug.h  cache_sim.cpp  cache_simulator.cpp  statistics.sh
lab2/examples/: cacheconfig.txt
lab3/: Makefile  branchsimulator.cpp  branchsimulator.out  chart.xlsx  lab3.docx  trace.txt.out  trace.txt.out.levin
